--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 return;
             }
 
-            axios.post('https://umarsignupserver.herokuapp.com/signup', {
+            axios.post('https://umarsignupserver.herokuapp.com/signup/', {
 
                 firstName,
                 lastName,
