my signup page error message update

--- a/index.html
+++ b/index.html
@@ -116,11 +116,12 @@
             })
                 .then(function (response) {
                     console.log(response.data);
-                    document.querySelector("#message").innerHTML = response.data.message;
+                    // document.querySelector("#message").innerHTML = response.data.message;
+                    document.getElementById("errorMsg").innerHTML =response.data.message;
                 })
                 .catch(function (error) {
                     console.log(error.response.data);
-                    document.querySelector("#message").innerHTML = error.response.data.message;
+                    document.getElementById("errorMsg").innerHTML =response.data.message;
                 });
 
 
