--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <input type="text" id="lastname">
 
         <br>
-        <label for="Email">Email</label>
+        <label for="email">Email</label>
         <input type="email" id="email">
 
 
@@ -116,7 +116,8 @@
             })
                 .then(function (response) {
                     console.log(response.data);
-                     document.getElementById("errorMsg").innerHTML =response.data.message;
+                    document.getElementById("errorMsg").innerHTML = response.data.message;
+                     
                 })
                 .catch(function (error) {
                     console.log(error.response.data);
