--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             background-image: url("./BG.jpg");
 
         }
+        
+        .clserror{
+
+            color: crimson;
+        }
+        
     </style>
 </head>
 
@@ -63,7 +69,7 @@
         <br>
         <input type="submit" name="signup" value="Signup">
         <br>
-        <div id="errorMsg"></div>
+        <div id="errorMsg" class="clsError"></div>
     </form>
 
 
@@ -71,7 +77,7 @@
     <script>
 
         function UserSignup() {
-
+            document.getElementById("errorMsg").innerHTML = "";
             var usr_fnm = document.getElementById("firstname").value;
             var usr_lnm = document.getElementById("lastname").value;
             var usr_eml = document.getElementById("email").value;
@@ -89,8 +95,6 @@
                 document.getElementById("errorMsg").innerHTML = "Please fill complete form";
                 console.log("please fill");
             } else {
-                document.getElementById("errorMsg").innerHTML = "";
-
                 console.log("else condition");
             }
 
